--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,14 +20,15 @@ body {
   width: 100%;
   height: 100%;
   margin: 150px 0;
+  border: 2px solid red;
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
-  height: 300px;
-  width: 300px;
+  height: 400px;
+  width: 400px;
   padding: 10px;
   border-radius: 20px;
   display: flex;
