--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,13 +7,13 @@ body {
   height: 100%;
 }
 
-.swiper {
+.peopleslider .swiper {
   width: 100%;
   height: 100%;
   /* margin: 150px 0; */
 }
 
-.swiper-slide {
+.peopleslider .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
@@ -27,10 +27,9 @@ body {
   justify-content: space-around;
 }
 
-.swiper-slide img {
+.peopleslider .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
