--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,3 +33,30 @@ body {
   height: 100%;
   object-fit: cover;
 }
+
+/* .placementslider .swiper {
+  width: 80%;
+  height: 80%;
+
+}
+
+.placementslider .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  height: 100%;
+  width: 100%;
+  padding: 10px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.placementslider .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
